# AdventOfCode

./: pyproject.toml
2015/: Day01.ipynb  Day02.ipynb  Day03.ipynb  Day04.ipynb  Day05.ipynb  Day06.ipynb
2023/: Day01.ipynb  Day02.ipynb  Day03.ipynb  Day04.ipynb  Day05.ipynb  Day06.ipynb  Day07.ipynb  Day08.ipynb  Day09.ipynb  Day1.ipynb  Day10.ipynb  Day11.ipynb  Day12.ipynb  Day13.ipynb  Day14.ipynb  Day15.ipynb  Day2.ipynb
2024/: Day01.ipynb  Day02.ipynb  Day03.ipynb  Day04.ipynb
2025/: Day01.ipynb  Day02.ipynb  Day03.ipynb  Day04.ipynb  Day05.ipynb  Day06.ipynb
