[project]
name = "aoc"
version = "0.1.0"
description = "Advent of Code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
]

[tool.uv]
package = true

[tool.mypy]
pretty = true
show_error_codes = true
ignore_missing_imports = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
select = [
    "ANN001", # flake8-annotations
    "ANN201", # flake8-annotations
    "B",      # flake8-bugbear
    "C90",    # mccabe complexity
    "E",      # pycodestyle
    "F",      # pyflakes
    "I",      # isort
    "RUF100", # unused noqa directive
    "S",      # flake8-bandit
]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
ignore = ["E501", "S101"] # Avoid enforcing line-length violations, and assert

[tool.ruff.lint.pydocstyle]
convention = "google"
